--- a/leetcode_medium.ipynb
+++ b/leetcode_medium.ipynb
@@ -1284,6 +1284,220 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 50. Pow(x, n)\n",
+    "Implement pow(x, n), which calculates x raised to the power n (xn).\n",
+    "```\n",
+    "Example 1:\n",
+    "Input: 2.00000, 10\n",
+    "Output: 1024.00000\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runtime: 24 ms, faster than 97.14% of Python3 online submissions for Pow(x, n).\n",
+    "# Memory Usage: 12.7 MB, less than 100.00% of Python3 online submissions for Pow(x, n).\n",
+    "class Solution:\n",
+    "    def myPow(self, x: float, n: int) -> float:\n",
+    "        if n < 0:\n",
+    "            x, n = 1/x, -n\n",
+    "        if n == 0 or x == 1:\n",
+    "            return 1\n",
+    "        def dandc(x, n):\n",
+    "            if n == 0:\n",
+    "                return 1\n",
+    "            elif n == 1:\n",
+    "                return x\n",
+    "            else:\n",
+    "                s = dandc(x, n//2)\n",
+    "                r = x if n%2 else 1\n",
+    "                return s*s*r\n",
+    "        return dandc(x,n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 54. Spiral Matrix\n",
+    "Given a matrix of m x n elements (m rows, n columns), return all elements of the matrix in spiral order.\n",
+    "```\n",
+    "Example 1:\n",
+    "Input:\n",
+    "[[ 1, 2, 3 ],\n",
+    " [ 4, 5, 6 ],\n",
+    " [ 7, 8, 9 ]]\n",
+    "Output: [1,2,3,6,9,8,7,4,5]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runtime: 40 ms, faster than 33.70% of Python3 online submissions for Spiral Matrix.\n",
+    "# Memory Usage: 12.7 MB, less than 100.00% of Python3 online submissions for Spiral Matrix.\n",
+    "class Solution:\n",
+    "    def spiralOrder(self, matrix: List[List[int]]) -> List[int]:\n",
+    "        dirc = 0\n",
+    "        ans = []\n",
+    "        while len(matrix) and len(matrix[0]):\n",
+    "            if dirc == 0:\n",
+    "                ans = ans+matrix[0]\n",
+    "                matrix.pop(0)\n",
+    "            if dirc == 1:\n",
+    "                for imat in matrix: \n",
+    "                    ans.append(imat[-1])\n",
+    "                    imat.pop(-1)\n",
+    "            if dirc == 2:\n",
+    "                ans = ans+matrix[-1][::-1]\n",
+    "                matrix.pop(-1)\n",
+    "            if dirc == 3:\n",
+    "                for imat in matrix[::-1]: \n",
+    "                    ans.append(imat[0])\n",
+    "                    imat.pop(0)\n",
+    "            dirc = (dirc+1)%4\n",
+    "        return ans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 55. Jump Game\n",
+    "Given an array of non-negative integers, you are initially positioned at the first index of the array.\n",
+    "\n",
+    "Each element in the array represents your maximum jump length at that position.\n",
+    "\n",
+    "Determine if you are able to reach the last index.\n",
+    "```\n",
+    "Example 1:\n",
+    "Input: [2,3,1,1,4]\n",
+    "Output: true\n",
+    "Explanation: Jump 1 step from index 0 to 1, then 3 steps to the last index.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runtime: 92 ms, faster than 92.23% of Python3 online submissions for Jump Game.\n",
+    "# Memory Usage: 14.8 MB, less than 7.14% of Python3 online submissions for Jump Game.\n",
+    "class Solution:\n",
+    "    def canJump(self, nums: List[int]) -> bool:\n",
+    "        if 0 not in nums:\n",
+    "            return True\n",
+    "        maxReach = 0\n",
+    "        for i in range(len(nums)):\n",
+    "            if i > maxReach:\n",
+    "                return False\n",
+    "            maxReach = max(maxReach, nums[i]+i)\n",
+    "            if maxReach >= len(nums)-1:\n",
+    "                return True\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 56. Merge Intervals\n",
+    "Given a collection of intervals, merge all overlapping intervals.\n",
+    "```\n",
+    "Example 1:\n",
+    "Input: [[1,3],[2,6],[8,10],[15,18]]\n",
+    "Output: [[1,6],[8,10],[15,18]]\n",
+    "Explanation: Since intervals [1,3] and [2,6] overlaps, merge them into [1,6].\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runtime: 88 ms, faster than 93.54% of Python3 online submissions for Merge Intervals.\n",
+    "# Memory Usage: 14.7 MB, less than 6.52% of Python3 online submissions for Merge Intervals.\n",
+    "class Solution:\n",
+    "    def merge(self, intervals: List[List[int]]) -> List[List[int]]:\n",
+    "        if not intervals:\n",
+    "            return intervals\n",
+    "        intervals = sorted(intervals, key=lambda x: x[0])\n",
+    "        ans = [intervals[0]]\n",
+    "        for interval in intervals:\n",
+    "            if interval[0] <= ans[-1][1]:\n",
+    "                ans[-1] = [ans[-1][0], max(ans[-1][1], interval[1])]\n",
+    "            else:\n",
+    "                ans.append(interval)\n",
+    "        return ans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 59. Spiral Matrix II\n",
+    "Given a positive integer n, generate a square matrix filled with elements from 1 to n2 in spiral order.\n",
+    "```\n",
+    "Example:\n",
+    "Input: 3\n",
+    "Output:\n",
+    "[[ 1, 2, 3 ],\n",
+    " [ 8, 9, 4 ],\n",
+    " [ 7, 6, 5 ]]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runtime: 32 ms, faster than 86.82% of Python3 online submissions for Spiral Matrix II.\n",
+    "# Memory Usage: 12.7 MB, less than 100.00% of Python3 online submissions for Spiral Matrix II.\n",
+    "class Solution:\n",
+    "    def generateMatrix(self, n: int) -> List[List[int]]:\n",
+    "        ans=[[0]*n for i in range(n)]\n",
+    "        i=1\n",
+    "        colMin, rowMin = 0, 0\n",
+    "        colMax, rowMax =n-1, n-1\n",
+    "        while(i<n**2//2*2):\n",
+    "            for j in range(colMin,colMax):\n",
+    "                ans[rowMin][j]=i\n",
+    "                i+=1\n",
+    "            for j in range(rowMin,rowMax):\n",
+    "                ans[j][colMax]=i\n",
+    "                i+=1\n",
+    "            for j in range(colMax,colMin,-1):\n",
+    "                ans[rowMax][j]=i\n",
+    "                i+=1\n",
+    "            for j in range(rowMax,rowMin,-1):\n",
+    "                ans[j][colMin]=i\n",
+    "                i+=1\n",
+    "            colMin+=1\n",
+    "            rowMin+=1\n",
+    "            colMax-=1\n",
+    "            rowMax-=1\n",
+    "        if n%2:\n",
+    "            ans[int(n/2)][int(n/2)]=n**2\n",
+    "        return ans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 445. Add Two Numbers II\n",
     "You are given two non-empty linked lists representing two non-negative integers. The most significant digit comes first and each of their nodes contain a single digit. Add the two numbers and return it as a linked list.\n",
     "\n",
