--- a/leetcode_easy.ipynb
+++ b/leetcode_easy.ipynb
@@ -537,6 +537,49 @@
     "            digits = [1]+digits\n",
     "        return digits"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 67. Add Binary\n",
+    "Given two binary strings, return their sum (also a binary string).\n",
+    "\n",
+    "The input strings are both non-empty and contains only characters 1 or 0.\n",
+    "```\n",
+    "Example 1:\n",
+    "Input: a = \"11\", b = \"1\"\n",
+    "Output: \"100\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def addBinary(self, a: str, b: str) -> str:\n",
+    "        a = [int(x) for x in a]\n",
+    "        b = [int(x) for x in b]\n",
+    "        long, short = (a, b) if len(a) > len(b) else (b, a)\n",
+    "        if len(short) == 0:\n",
+    "            return long\n",
+    "        ans = []\n",
+    "        up = 0\n",
+    "        for i in range(len(long)):\n",
+    "            if i < len(short):\n",
+    "                ans.append((long[-i-1]+short[-i-1]+up)%2)\n",
+    "                up = (long[-i-1]+short[-i-1]+up)//2\n",
+    "            else:\n",
+    "                ans.append((long[-i-1]+up)%2)\n",
+    "                up = (long[-i-1]+up)//2\n",
+    "        if up:\n",
+    "            ans.append(up)\n",
+    "        ans = ''.join([str(x) for x in ans[::-1]])\n",
+    "        return ans"
+   ]
   }
  ],
  "metadata": {
