--- a/leetcode_medium.ipynb
+++ b/leetcode_medium.ipynb
@@ -1690,6 +1690,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 64. Minimum Path Sum\n",
+    "Given a m x n grid filled with non-negative numbers, find a path from top left to bottom right which minimizes the sum of all numbers along its path.\n",
+    "\n",
+    "Note: You can only move either down or right at any point in time.\n",
+    "```\n",
+    "Example:\n",
+    "Input:\n",
+    "[[1,3,1],\n",
+    "  [1,5,1],\n",
+    "  [4,2,1]]\n",
+    "Output: 7\n",
+    "Explanation: Because the path 1→3→1→1→1 minimizes the sum.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runtime: 96 ms, faster than 97.63% of Python3 online submissions for Minimum Path Sum.\n",
+    "# Memory Usage: 14.4 MB, less than 77.19% of Python3 online submissions for Minimum Path Sum.\n",
+    "class Solution:\n",
+    "    def minPathSum(self, grid: List[List[int]]) -> int:\n",
+    "        nrow = len(grid)\n",
+    "        ncol = len(grid[0])\n",
+    "\n",
+    "        for r in range(nrow):\n",
+    "            for c in range(ncol):\n",
+    "                if r == 0 and c == 0:\n",
+    "                    continue\n",
+    "                elif r == 0 and c != 0:\n",
+    "                    grid[r][c] += grid[r][c-1]\n",
+    "                elif r != 0 and c == 0: \n",
+    "                    grid[r][c] += grid[r-1][c]\n",
+    "                else:\n",
+    "                    grid[r][c] += min(grid[r-1][c], grid[r][c-1])\n",
+    "        return grid[r][c]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 71. Simplify Path\n",
+    "Given an absolute path for a file (Unix-style), simplify it. Or in other words, convert it to the canonical path.\n",
+    "\n",
+    "In a UNIX-style file system, a period . refers to the current directory. Furthermore, a double period .. moves the directory up a level. For more information, see: Absolute path vs relative path in Linux/Unix\n",
+    "\n",
+    "Note that the returned canonical path must always begin with a slash /, and there must be only a single slash / between two directory names. The last directory name (if it exists) must not end with a trailing /. Also, the canonical path must be the shortest string representing the absolute path.\n",
+    "```\n",
+    "Example 4:\n",
+    "Input: \"/a/./b/../../c/\"\n",
+    "Output: \"/c\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runtime: 28 ms, faster than 95.38% of Python3 online submissions for Simplify Path.\n",
+    "# Memory Usage: 12.7 MB, less than 100.00% of Python3 online submissions for Simplify Path.\n",
+    "class Solution:\n",
+    "    def simplifyPath(self, path: str) -> str:\n",
+    "        paths = path.split('/')[1:]\n",
+    "        stack = []\n",
+    "        for x in paths:\n",
+    "            if x == '.' or (x == '..' and len(stack) == 0) or x == '':\n",
+    "                continue\n",
+    "            elif x == '..' and len(stack) > 0:\n",
+    "                stack.pop()\n",
+    "            else:\n",
+    "                stack.append(x)\n",
+    "        ans = '/'+'/'.join(stack)\n",
+    "        return ans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 445. Add Two Numbers II\n",
     "You are given two non-empty linked lists representing two non-negative integers. The most significant digit comes first and each of their nodes contain a single digit. Add the two numbers and return it as a linked list.\n",
     "\n",
