--- a/leetcode_medium.ipynb
+++ b/leetcode_medium.ipynb
@@ -1775,6 +1775,243 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 73. Set Matrix Zeroes\n",
+    "Given a m x n matrix, if an element is 0, set its entire row and column to 0. Do it in-place.\n",
+    "```\n",
+    "Example 1:\n",
+    "Input: \n",
+    "[[1,1,1],\n",
+    "  [1,0,1],\n",
+    "  [1,1,1]]\n",
+    "Output: \n",
+    "[[1,0,1],\n",
+    "  [0,0,0],\n",
+    "  [1,0,1]]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runtime: 136 ms, faster than 92.65% of Python3 online submissions for Set Matrix Zeroes.\n",
+    "# Memory Usage: 13.3 MB, less than 97.44% of Python3 online submissions for Set Matrix Zeroes.\n",
+    "class Solution:\n",
+    "    def setZeroes(self, matrix: List[List[int]]) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify matrix in-place instead.\n",
+    "        \"\"\"\n",
+    "        zeros = {'row':set(), 'col':set()}\n",
+    "        for row in range(len(matrix)):\n",
+    "            for col in range(len(matrix[0])):\n",
+    "                if matrix[row][col] == 0:\n",
+    "                    zeros['row'].add(row)\n",
+    "                    zeros['col'].add(col)  \n",
+    "        \n",
+    "        for row in range(len(matrix)):\n",
+    "            for col in range(len(matrix[0])):\n",
+    "                if row in zeros['row'] or col in zeros['col']:\n",
+    "                    matrix[row][col] = 0  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 74. Search a 2D Matrix\n",
+    "Write an efficient algorithm that searches for a value in an m x n matrix. This matrix has the following properties:\n",
+    "\n",
+    "    Integers in each row are sorted from left to right.\n",
+    "    The first integer of each row is greater than the last integer of the previous row.\n",
+    "```\n",
+    "Example 1:\n",
+    "Input:\n",
+    "matrix = [[1,   3,  5,  7],\n",
+    "  [10, 11, 16, 20],\n",
+    "  [23, 30, 34, 50]]\n",
+    "target = 3\n",
+    "Output: true\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runtime: 48 ms, faster than 99.96% of Python3 online submissions for Search a 2D Matrix.\n",
+    "# Memory Usage: 14.9 MB, less than 5.88% of Python3 online submissions for Search a 2D Matrix.\n",
+    "class Solution:\n",
+    "    def searchMatrix(self, matrix: List[List[int]], target: int) -> bool:\n",
+    "        def bisearch(matrix, target):\n",
+    "            if not matrix:\n",
+    "                return False\n",
+    "            elif target < matrix[len(matrix)//2][0]:\n",
+    "                return bisearch(matrix[:len(matrix)//2], target)\n",
+    "            elif target > matrix[len(matrix)//2][-1]:\n",
+    "                return bisearch(matrix[len(matrix)//2+1:], target)\n",
+    "            elif target in matrix[len(matrix)//2]:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
+    "        if not matrix or not matrix[0]:\n",
+    "            return False\n",
+    "        return bisearch(matrix, target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 75. Sort Colors\n",
+    "Given an array with n objects colored red, white or blue, sort them in-place so that objects of the same color are adjacent, with the colors in the order red, white and blue.\n",
+    "\n",
+    "Here, we will use the integers 0, 1, and 2 to represent the color red, white, and blue respectively.\n",
+    "\n",
+    "Note: You are not suppose to use the library's sort function for this problem.\n",
+    "```\n",
+    "Example:\n",
+    "Input: [2,0,2,1,1,0]\n",
+    "Output: [0,0,1,1,2,2]\n",
+    "```\n",
+    "Follow up:\n",
+    "\n",
+    "    A rather straight forward solution is a two-pass algorithm using counting sort.\n",
+    "    First, iterate the array counting number of 0's, 1's, and 2's, then overwrite array with total number of 0's, then 1's and followed by 2's.\n",
+    "    Could you come up with a one-pass algorithm using only constant space?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runtime: 24 ms, faster than 99.07% of Python3 online submissions for Sort Colors.\n",
+    "# Memory Usage: 12.7 MB, less than 100.00% of Python3 online submissions for Sort Colors.\n",
+    "class Solution:\n",
+    "    '''\n",
+    "    1 pass solution\n",
+    "    '''\n",
+    "    def sortColors(self, nums: List[int]) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify nums in-place instead.\n",
+    "        \"\"\"\n",
+    "        ind0, ind2 = 0, len(nums)-1\n",
+    "        for i in range(len(nums)):\n",
+    "            if nums[i] == 0:\n",
+    "                while i >= ind0:\n",
+    "                    if nums[ind0] != 0:\n",
+    "                        nums[i], nums[ind0] = nums[ind0], nums[i]\n",
+    "                        if nums[i] == 2:\n",
+    "                            nums[i], nums[ind2] = nums[ind2], nums[i]\n",
+    "                            ind2 += 1\n",
+    "                        ind0 += 1\n",
+    "                        break\n",
+    "                    ind0 += 1\n",
+    "            elif nums[i] == 2:\n",
+    "                while i <= ind2:\n",
+    "                    if nums[ind2] != 2:\n",
+    "                        nums[i], nums[ind2] = nums[ind2], nums[i]\n",
+    "                        if nums[i] == 0:\n",
+    "                            nums[i], nums[ind0] = nums[ind0], nums[i]\n",
+    "                            ind0 += 1\n",
+    "                        ind2 -= 1\n",
+    "                        break\n",
+    "                    ind2 -= 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 77. Combinations\n",
+    "Given two integers n and k, return all possible combinations of k numbers out of 1 ... n.\n",
+    "```\n",
+    "Example:\n",
+    "Input: n = 4, k = 2\n",
+    "Output:\n",
+    "[[2,4],\n",
+    "  [3,4],\n",
+    "  [2,3],\n",
+    "  [1,2],\n",
+    "  [1,3],\n",
+    "  [1,4],]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runtime: 92 ms, faster than 95.41% of Python3 online submissions for Combinations.\n",
+    "# Memory Usage: 14.1 MB, less than 100.00% of Python3 online submissions for Combinations.\n",
+    "class Solution:\n",
+    "    def combine(self, n: int, k: int) -> List[List[int]]:\n",
+    "        ans = []\n",
+    "        def dfs(cur, remain):\n",
+    "            if len(cur) == k:\n",
+    "                ans.append(cur)\n",
+    "            else:\n",
+    "                for i in range(len(remain)-(k-len(cur)-1)):\n",
+    "                    dfs(cur+[remain[i]], remain[i+1:])\n",
+    "        dfs([], range(1,n+1))\n",
+    "        return ans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 78. Subsets\n",
+    "Given a set of distinct integers, nums, return all possible subsets (the power set).\n",
+    "\n",
+    "Note: The solution set must not contain duplicate subsets.\n",
+    "```\n",
+    "Example:\n",
+    "Input: nums = [1,2,3]\n",
+    "Output:\n",
+    "[[3],\n",
+    "  [1],\n",
+    "  [2],\n",
+    "  [1,2,3],\n",
+    "  [1,3],\n",
+    "  [2,3],\n",
+    "  [1,2],\n",
+    "  []]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runtime: 32 ms, faster than 91.02% of Python3 online submissions for Subsets.\n",
+    "# Memory Usage: 12.7 MB, less than 100.00% of Python3 online submissions for Subsets.\n",
+    "class Solution:\n",
+    "    def subsets(self, nums: List[int]) -> List[List[int]]:\n",
+    "        ans = []\n",
+    "        def dfs(cur, remain):\n",
+    "            ans.append(cur)\n",
+    "            if remain:\n",
+    "                for i in range(len(remain)):\n",
+    "                    dfs(cur+[remain[i]], remain[i+1:])\n",
+    "        dfs([], nums)\n",
+    "        return ans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 445. Add Two Numbers II\n",
     "You are given two non-empty linked lists representing two non-negative integers. The most significant digit comes first and each of their nodes contain a single digit. Add the two numbers and return it as a linked list.\n",
     "\n",
