--- a/leetcode_easy_000_200.ipynb
+++ b/leetcode_easy_000_200.ipynb
@@ -1346,6 +1346,48 @@
     "                count[x] = 1\n",
     "        return [x for x in count.keys() if count[x] == 1][0]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 141. Linked List Cycle\n",
+    "Given a linked list, determine if it has a cycle in it.\n",
+    "\n",
+    "To represent a cycle in the given linked list, we use an integer pos which represents the position (0-indexed) in the linked list where tail connects to. If pos is -1, then there is no cycle in the linked list.\n",
+    "```\n",
+    "Example 1:\n",
+    "Input: head = [3,2,0,-4], pos = 1\n",
+    "Output: true\n",
+    "Explanation: There is a cycle in the linked list, where tail connects to the second node.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "class ListNode:\n",
+    "    def __init__(self, x):\n",
+    "        self.val = x\n",
+    "        self.next = None\n",
+    "\n",
+    "class Solution:\n",
+    "    def hasCycle(self, head: ListNode) -> bool:\n",
+    "        if not head:\n",
+    "            return False\n",
+    "        slow = head\n",
+    "        fast = head\n",
+    "        while slow.next and fast.next and fast.next.next:\n",
+    "            slow = slow.next\n",
+    "            fast = fast.next.next\n",
+    "            if slow == fast:\n",
+    "                return True\n",
+    "        return False"
+   ]
   }
  ],
  "metadata": {
