--- a/leetcode_medium_000_200.ipynb
+++ b/leetcode_medium_000_200.ipynb
@@ -15,7 +15,8 @@
     "127. Word Ladder | Breadth-first Search\n",
     "130. Surrounded Regions | Depth-first Search, Breadth-first Search, Union Find\n",
     "134. Gas Station | Greedy\n",
-    "139. Word Break | Dynamic Programming"
+    "139. Word Break | Dynamic Programming\n",
+    "142. Linked List Cycle II | Linked List, Two Pointers"
    ]
   },
   {
