--- a/leetcode_easy_000_200.ipynb
+++ b/leetcode_easy_000_200.ipynb
@@ -1388,6 +1388,85 @@
     "                return True\n",
     "        return False"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 155. Min Stack\n",
+    "Design a stack that supports push, pop, top, and retrieving the minimum element in constant time.\n",
+    "\n",
+    "    push(x) -- Push element x onto stack.\n",
+    "    pop() -- Removes the element on top of the stack.\n",
+    "    top() -- Get the top element.\n",
+    "    getMin() -- Retrieve the minimum element in the stack."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MinStack:\n",
+    "    def __init__(self):\n",
+    "        \"\"\"\n",
+    "        initialize your data structure here.\n",
+    "        \"\"\"\n",
+    "        self.lst = []\n",
+    "\n",
+    "    def push(self, x: int) -> None:\n",
+    "        self.lst.append(x)\n",
+    "\n",
+    "    def pop(self) -> None:\n",
+    "        self.lst.pop()\n",
+    "\n",
+    "    def top(self) -> int:\n",
+    "        return self.lst[-1]\n",
+    "\n",
+    "    def getMin(self) -> int:\n",
+    "        return min(self.lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 160. Intersection of Two Linked Lists\n",
+    "Write a program to find the node at which the intersection of two singly linked lists begins."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "class ListNode:\n",
+    "    def __init__(self, x):\n",
+    "        self.val = x\n",
+    "        self.next = None\n",
+    "\n",
+    "class Solution:\n",
+    "    def getIntersectionNode(self, headA: ListNode, headB: ListNode) -> ListNode:\n",
+    "        a_stack, b_stack = [], []\n",
+    "        while headA:\n",
+    "            a_stack.append(headA)\n",
+    "            headA = headA.next\n",
+    "        while headB:\n",
+    "            b_stack.append(headB)\n",
+    "            headB = headB.next\n",
+    "        ans = None\n",
+    "        while a_stack and b_stack:\n",
+    "            x = a_stack.pop()\n",
+    "            y = b_stack.pop()\n",
+    "            if x == y:\n",
+    "                ans = x\n",
+    "            else:\n",
+    "                break\n",
+    "        return ans"
+   ]
   }
  ],
  "metadata": {
