--- a/leetcode_medium_000_200.ipynb
+++ b/leetcode_medium_000_200.ipynb
@@ -3759,6 +3759,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 143. Reorder List\n",
+    "Given a singly linked list L: L0→L1→…→Ln-1→Ln,\n",
+    "reorder it to: L0→Ln→L1→Ln-1→L2→Ln-2→…\n",
+    "\n",
+    "You may not modify the values in the list's nodes, only nodes itself may be changed.\n",
+    "```\n",
+    "Example 1:\n",
+    "Given 1->2->3->4, reorder it to 1->4->2->3.\n",
+    "Example 2:\n",
+    "Given 1->2->3->4->5, reorder it to 1->5->2->4->3.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runtime: 140 ms, faster than 5.12% of Python3 online submissions for Reorder List.\n",
+    "# Memory Usage: 21.9 MB, less than 61.54% of Python3 online submissions for Reorder List.\n",
+    "# Definition for singly-linked list.\n",
+    "class ListNode:\n",
+    "    def __init__(self, x):\n",
+    "        self.val = x\n",
+    "        self.next = None\n",
+    "\n",
+    "class Solution:\n",
+    "    def reorderList(self, head: ListNode) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify head in-place instead.\n",
+    "        \"\"\"\n",
+    "        if not head:\n",
+    "            return head\n",
+    "        queue = []\n",
+    "        while head:\n",
+    "            queue.append(head)\n",
+    "            head = head.next\n",
+    "        n = 0\n",
+    "        head = queue.pop(0)\n",
+    "        ans = head\n",
+    "        while queue:\n",
+    "            tmp = queue.pop(0) if n % 2 else queue.pop(-1)\n",
+    "            n += 1\n",
+    "            head.next = tmp\n",
+    "            head = tmp\n",
+    "        head.next = None\n",
+    "        return ans\n",
+    "                \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 144. Binary Tree Preorder Traversal\n",
+    "Given a binary tree, return the preorder traversal of its nodes' values.\n",
+    "```\n",
+    "Example:\n",
+    "Input: [1,null,2,3]\n",
+    "   1\n",
+    "    \\\n",
+    "     2\n",
+    "    /\n",
+    "   3\n",
+    "\n",
+    "Output: [1,2,3]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runtime: 24 ms, faster than 86.20% of Python3 online submissions for Binary Tree Preorder Traversal.\n",
+    "# Memory Usage: 12.8 MB, less than 100.00% of Python3 online submissions for Binary Tree Preorder Traversal.\n",
+    "# Definition for a binary tree node.\n",
+    "class TreeNode:\n",
+    "    def __init__(self, x):\n",
+    "        self.val = x\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "\n",
+    "class Solution:\n",
+    "    def preorderTraversal(self, root: TreeNode) -> List[int]:\n",
+    "        if not root:\n",
+    "            return []\n",
+    "        ans = []\n",
+    "        def dfs(node):\n",
+    "            ans.append(node.val)\n",
+    "            if node.left:\n",
+    "                dfs(node.left)\n",
+    "            if node.right:\n",
+    "                dfs(node.right)\n",
+    "        dfs(root)\n",
+    "        return ans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 445. Add Two Numbers II\n",
     "You are given two non-empty linked lists representing two non-negative integers. The most significant digit comes first and each of their nodes contain a single digit. Add the two numbers and return it as a linked list.\n",
     "\n",
