--- a/leetcode_medium_000_200.ipynb
+++ b/leetcode_medium_000_200.ipynb
@@ -63,40 +63,28 @@
     "\n",
     "class Solution:\n",
     "    def addTwoNumbers(self, l1: ListNode, l2: ListNode) -> ListNode:\n",
-    "        head_a, head_b = l1, l2\n",
-    "        len_a, len_b = 1,1\n",
-    "        while head_a.next:\n",
-    "            len_a += 1\n",
-    "            head_a = head_a.next\n",
-    "        while head_b.next:\n",
-    "            len_b += 1\n",
-    "            head_b = head_b.next\n",
-    "        start_l, start_s =(l1, l2) if len_a > len_b else (l2, l1)\n",
-    "        len_l, len_s = (len_a, len_b) if len_a > len_b else (len_b, len_a)\n",
-    "\n",
-    "        ans = (start_l.val + start_s.val)%10\n",
-    "        bump = 1 if (start_l.val + start_s.val) >= 10 else 0\n",
-    "        ans_listnode = ListNode(ans)\n",
-    "        temp = ans_listnode\n",
-    "        for i in range(1,len_s):\n",
-    "            start_l, start_s = start_l.next, start_s.next\n",
-    "            val = start_l.val + start_s.val + bump\n",
-    "            ans = val%10\n",
+    "        init = l1.val + l2.val\n",
+    "        res = ListNode(init % 10)\n",
+    "        bump = 1 if init >= 10 else 0\n",
+    "        tmp = res\n",
+    "        while l1.next is not None or l2.next is not None:\n",
+    "            if l1.next is not None and l2.next is not None:\n",
+    "                l1, l2 = l1.next, l2.next\n",
+    "                val = l1.val + l2.val\n",
+    "            elif l1.next is not None:\n",
+    "                l1 = l1.next\n",
+    "                val = l1.val\n",
+    "            elif l2.next is not None:\n",
+    "                l2 = l2.next\n",
+    "                val = l2.val\n",
+    "            val = bump + val\n",
+    "            node = ListNode(val % 10)\n",
     "            bump = 1 if val >= 10 else 0\n",
-    "            node = ListNode(ans)\n",
-    "            temp.next = node\n",
-    "            temp = node\n",
-    "        for i in range(len_s,len_l):\n",
-    "            start_l = start_l.next\n",
-    "            val = start_l.val + bump\n",
-    "            ans = val%10\n",
-    "            bump = 1 if val >= 10 else 0\n",
-    "            node = ListNode(ans)\n",
-    "            temp.next = node\n",
-    "            temp = node\n",
-    "        if bump:\n",
-    "            temp.next = ListNode(1)\n",
-    "        return ans_listnode"
+    "            tmp.next = node\n",
+    "            tmp = node\n",
+    "        if bump == 1:\n",
+    "            tmp.next = ListNode(1)\n",
+    "        return res"
    ]
   },
   {
@@ -135,7 +123,7 @@
     "class Solution:\n",
     "    def lengthOfLongestSubstring(self, s: str) -> int:\n",
     "        longest = 0\n",
-    "        sub = ''\n",
+    "        sub = \"\"\n",
     "        for elem in s:\n",
     "            if elem in sub:\n",
     "                sub = sub[sub.index(elem)+1:] + elem\n",
@@ -174,33 +162,14 @@
     "# Memory Usage: 12.9 MB, less than 100.00% of Python3 online submissions for Longest Palindromic Substring.\n",
     "class Solution:\n",
     "    def longestPalindrome(self, s: str) -> str:\n",
-    "        if s == '' or len(s) == 1:\n",
-    "            return s\n",
-    "        pike = []\n",
-    "        for i in range(1,len(s)):\n",
-    "            if i < len(s)-1 and s[i-1] == s[i+1]:\n",
-    "                pike.append((i-1,i+1))\n",
-    "            if s[i-1] == s[i]:\n",
-    "                pike.append((i-1,i))\n",
-    "            if i < len(s)-1 and s[i] == s[i+1]:\n",
-    "                pike.append((i,i+1))\n",
-    "        # print(pike)   \n",
-    "        for i,x in enumerate(pike):\n",
-    "            # print(x)\n",
-    "            start = x[0]\n",
-    "            end = x[1]\n",
-    "            while start>=1 and end<len(s)-1:\n",
-    "                if s[start-1] == s[end+1]:\n",
-    "                    start -= 1\n",
-    "                    end +=1\n",
-    "                else:\n",
-    "                    break\n",
-    "            pike[i] = [start, end]\n",
-    "        # print(pike)\n",
-    "        if len(pike) == 0:\n",
-    "            return s[0]\n",
-    "        pike = sorted(pike, key = lambda x: x[1] - x[0], reverse = True) \n",
-    "        return s[pike[0][0]:pike[0][1]+1]"
+    "        l, n1, n2 = len(s), 0, 1\n",
+    "        for i in range(l):\n",
+    "            for a, b in (i, i), (i, i+1):\n",
+    "                while 0 <= a and b < l and s[a] == s[b]: \n",
+    "                    a, b = a-1, b+1\n",
+    "                if b-a > n2-n1: \n",
+    "                    n1, n2 = a+1, b\n",
+    "        return s[n1:n2]"
    ]
   },
   {
@@ -879,10 +848,12 @@
     "        def bisearch(start,end,target):\n",
     "            if start == end and nums[end]!= target:\n",
     "                return -1\n",
+    "            if nums[end]== target:\n",
+    "                return end\n",
     "            if end - start == 1:\n",
     "                res = end if nums[end] == target else start if nums[start] == target else -1\n",
     "                return res\n",
-    "            if nums[start] <= nums[end]:\n",
+    "            if nums[start] < nums[end]:\n",
     "                if target == nums[(start+end)//2]:\n",
     "                    return (start+end)//2\n",
     "                elif target > nums[(start+end)//2]:\n",
@@ -892,11 +863,11 @@
     "            else:\n",
     "                if nums[(start+end)//2] >= nums[start] and nums[start] <= target <= nums[(start+end)//2]:\n",
     "                    return bisearch(start,(start+end)//2,target)\n",
-    "                elif nums[(start+end)//2] <= nums[start] and (target <= nums[(start+end)//2] or target >= nums[start]):\n",
-    "                    return bisearch(start,(start+end)//2,target)\n",
-    "                elif nums[(start+end)//2] <= nums[end] and nums[(start+end)//2] <= target<= nums[end]:\n",
+    "                elif nums[(start+end)//2] >= nums[start] and (target <= nums[end] or target >= nums[(start+end)//2]):\n",
     "                    return bisearch((start+end)//2,end,target)\n",
-    "                elif nums[(start+end)//2] >= nums[end] and (target <= nums[end] or target >= nums[(start+end)//2]):\n",
+    "                elif nums[(start+end)//2] < nums[start] and (target <= nums[(start+end)//2] or target >= nums[start]):\n",
+    "                    return bisearch(start,(start+end)//2,target)\n",
+    "                elif nums[(start+end)//2] < nums[start] and nums[(start+end)//2] <= target<= nums[end]:\n",
     "                    return bisearch((start+end)//2,end,target)\n",
     "            return -1\n",
     "        if len(nums) == 0:\n",
@@ -945,7 +916,7 @@
     "            if target == nums[(start+end)//2]:\n",
     "                return (start+end)//2\n",
     "            elif target > nums[(start+end)//2]:\n",
-    "                return bisearch((start+end)//2, end, target)\n",
+    "                return bisearch((start+end)//2+1, end, target)\n",
     "            else:\n",
     "                return bisearch(start, (start+end)//2, target)\n",
     "        if len(nums)==0 or (len(nums)==1 and nums[0]!=target): \n",
@@ -1041,7 +1012,7 @@
     "class Solution:\n",
     "    def combinationSum(self, candidates: List[int], target: int) -> List[List[int]]:\n",
     "        def dfs(cur, cur_target, last_x):\n",
-    "            for x in [t for t in candidates if t >= last_x]:\n",
+    "            for x in [t for t in candidates if t <= cur_target and t >= last_x]:\n",
     "                if x == cur_target:\n",
     "                    res.append(cur+[x])\n",
     "                elif x < cur_target:\n",
@@ -4792,7 +4763,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4806,7 +4777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
