--- a/leetcode_medium_000_200.ipynb
+++ b/leetcode_medium_000_200.ipynb
@@ -1902,7 +1902,7 @@
     "                        nums[i], nums[ind0] = nums[ind0], nums[i]\n",
     "                        if nums[i] == 2:\n",
     "                            nums[i], nums[ind2] = nums[ind2], nums[i]\n",
-    "                            ind2 += 1\n",
+    "                            ind2 -= 1\n",
     "                        ind0 += 1\n",
     "                        break\n",
     "                    ind0 += 1\n",
